egne model-klasser suffixes med 'Dto', og lidt fhir gymnastik