@@ -1,66 +1,60 @@
 package dk.kvalitetsit.fut.patient;
 
+import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.rest.client.api.IGenericClient;
 import ca.uhn.fhir.rest.client.interceptor.BearerTokenAuthInterceptor;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import dk.kvalitetsit.fut.auth.AuthService;
 import org.hl7.fhir.r4.model.Bundle;
-import org.openapitools.model.CreatePatient;
-import org.openapitools.model.Patient;
+import org.hl7.fhir.r4.model.Patient;
+import org.openapitools.model.PatientDto;
+import org.openapitools.model.CreatePatientDto;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class PatientServiceImpl implements PatientService {
 
-    private final Map<String, Patient> patients = new HashMap<>();
-    private IGenericClient fhirClient;
+    private final Map<String, PatientDto> patients = new HashMap<>();
+    private FhirContext fhirContext;
+    private String patientServiceUrl;
     private AuthService authService;
 
-
-    public PatientServiceImpl(IGenericClient fhirClient, AuthService authService) {
-        this.fhirClient = fhirClient;
+    public PatientServiceImpl(FhirContext fhirContext, String patientServiceUrl, AuthService authService) {
+        this.fhirContext = fhirContext;
+        this.patientServiceUrl = patientServiceUrl;
         this.authService = authService;
     }
 
-
     @Override
-    public Patient getPatient(String uuid) throws Exception {
+    public PatientDto getPatient(String uuid) throws Exception {
         boolean patientIsMissing = !this.patients.containsKey(uuid);
         if(patientIsMissing) throw new Exception("Patient not found");
         return patients.get(uuid);
     }
 
     @Override
-    public List<Patient> getPatients() {
-        List<Patient> patients = new ArrayList<>();
-
+    public List<PatientDto> getPatients() {
         BearerTokenAuthInterceptor authInterceptor = null;
         try {
             authInterceptor = new BearerTokenAuthInterceptor( authService.getToken() );
         } catch (JsonProcessingException e) {
             throw new RuntimeException(e);
         }
-        fhirClient.registerInterceptor(authInterceptor);
 
-        Bundle result = fhirClient
+        IGenericClient client = fhirContext.newRestfulGenericClient(patientServiceUrl);
+        client.registerInterceptor(authInterceptor);
+
+        Bundle result = client
                 .search()
-                .forResource(org.hl7.fhir.r4.model.Patient.class)
+                .forResource(Patient.class)
                 .returnBundle(Bundle.class)
                 .execute();
-        result.getEntry().forEach(b -> System.out.println(b.getFullUrl()));
 
-        for (Bundle.BundleEntryComponent bec : result.getEntry()) {
-            org.hl7.fhir.r4.model.Patient fhirPatient = (org.hl7.fhir.r4.model.Patient)bec.getResource();
-
-            Patient patient = new Patient();
-            patient.setFirstName(fhirPatient.getNameFirstRep().getGivenAsSingleString());
-            patient.setLastName(fhirPatient.getNameFirstRep().getNameAsSingleString());
-
-            patients.add(patient);
-        }
-
-        return patients;
-        //return patients.values().stream().toList();
+        return result.getEntry().stream()
+                .map(bundleEntryComponent -> (Patient)bundleEntryComponent.getResource())
+                .map(patient -> PatientMapper.mapPatient(patient))
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -70,14 +64,14 @@ public class PatientServiceImpl implements PatientService {
     }
 
     @Override
-    public Patient createPatient(CreatePatient patient) {
+    public PatientDto createPatient(CreatePatientDto patient) {
 
         return constructPatient(patient);
     }
 
 
-    private Patient constructPatient(CreatePatient createPatient) {
-        Patient patient = new Patient();
+    private PatientDto constructPatient(CreatePatientDto createPatient) {
+        PatientDto patient = new PatientDto();
         patient.setUuid(UUID.randomUUID().toString());
         patient.setFirstName(createPatient.getFirstName());
         patient.setLastName(createPatient.getLastName());
